svg image position fixed on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,23 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    top: 40rem;
+    top: 42rem;
     left: 0;
     display: block;
     z-index: -1;
     overflow: hidden;
+}
+@media (max-width:760px){
+    .svg-bg_background__2ILQI {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 56rem;
+        left: 0;
+        display: block;
+        z-index: -1;
+        overflow: hidden;
+    }  
 }
 .svg-bg_background__2ILQ {
     width: 100%;
